# Crew_IA_Agent_Optimization_problems

./: README.md  pyproject.toml  requirements.txt  test_mkp.txt
data/: 01_facil.txt
src/: agents.py  config.py  main.py  models.py  tasks.py  tools.py
