[project]
name = "crew-ia-agent-optimization-problems"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai-tools>=1.13.0",
    "crewai[google-genai]>=1.13.0",
    "google-generativeai>=0.8.6",
    "pandas>=3.0.2",
    "pydantic>=2.11.10",
    "python-dotenv>=1.1.1",
    "rich>=14.3.3",
]
